# gemem-AMD

./: .gitignore  README.md  environment.yml  pyproject.toml  setup_env.ps1
src/: 01_system_overview.py  02_gpu_config.py  03_npu_config.py  04_heterogeneous_demo.py
tutorials/: session0_concepts.py  session1_gpu_fundamentals.py  session2_advanced_gpu.py  session3_npu_inference.py  session4_heterogeneous.py  session5_interview.py  session6_perf_theory.py  session7_advanced_algo.py  session8_amd_npu_deep.py
